adding flight-opp

--- a/index.html
+++ b/index.html
@@ -878,7 +878,6 @@
           </button>
         </div>
       </div>
-    </section>
     <section
       id="page-route"
       data-page="route"
@@ -975,6 +974,190 @@
             <span class="material-symbols-outlined text-[20px] rotate-180">arrow_back</span>
           </button>
         </div>
+      </div>
+    </section>
+        </section>
+    <section
+      id="page-flight-opp"
+      data-page="flight-opp"
+      class="page hidden bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-100 font-display antialiased selection:bg-primary/30 selection:text-primary"
+      aria-hidden="true"
+    >
+      <div class="relative flex h-full min-h-screen w-full max-w-md mx-auto flex-col overflow-x-hidden bg-background-light dark:bg-background-dark shadow-2xl">
+        <header class="sticky top-0 z-20 bg-background-light/95 dark:bg-background-dark/95 backdrop-blur-md px-4 py-3 flex items-center justify-between border-b border-slate-200 dark:border-slate-800">
+          <button class="flex items-center justify-center w-10 h-10 rounded-full text-slate-700 dark:text-slate-300 hover:bg-slate-200/50 dark:hover:bg-slate-800/50 transition-colors" data-route="home" type="button">
+            <span class="material-symbols-outlined text-[24px]">arrow_forward</span>
+          </button>
+          <h1 class="text-xl font-bold tracking-tight text-slate-900 dark:text-white">فرصت‌های تحویل</h1>
+          <button class="flex items-center justify-center w-10 h-10 rounded-full bg-white dark:bg-slate-800 shadow-sm border border-slate-100 dark:border-slate-700 text-slate-700 dark:text-slate-300 hover:bg-slate-50 dark:hover:bg-slate-700 transition-colors">
+            <span class="material-symbols-outlined text-[24px]">filter_list</span>
+          </button>
+        </header>
+        <main class="flex-1 flex flex-col pb-24">
+          <div class="px-4 py-4">
+            <div class="flex flex-col gap-3 p-5 rounded-2xl bg-gradient-to-br from-primary to-blue-600 text-white shadow-lg shadow-blue-500/20">
+              <div class="flex justify-between items-start">
+                <div class="flex flex-col gap-1">
+                  <span class="text-blue-100 text-xs font-medium">پتانسیل درآمد کل</span>
+                  <span class="text-3xl font-extrabold tracking-tight font-display">۲۷۰عمان ریال</span>
+                </div>
+                <div class="bg-white/20 backdrop-blur-sm p-2 rounded-lg">
+                  <span class="material-symbols-outlined text-white">savings</span>
+                </div>
+              </div>
+              <div class="flex items-center gap-2 mt-1">
+                <span class="flex h-2 w-2 rounded-full bg-green-400 animate-pulse"></span>
+                <p class="text-blue-50 text-xs font-normal">۱۲ فرصت جدید در ۲۴ ساعت گذشته</p>
+              </div>
+            </div>
+          </div>
+          <div class="flex gap-3 px-4 pb-4 overflow-x-auto no-scrollbar">
+            <button class="flex h-9 shrink-0 items-center justify-center gap-x-2 rounded-full bg-slate-900 dark:bg-white px-5 shadow-sm transition-transform active:scale-95">
+              <span class="text-white dark:text-slate-900 text-xs font-bold">همه</span>
+            </button>
+            <button class="flex h-9 shrink-0 items-center justify-center gap-x-2 rounded-full bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 px-5 shadow-sm transition-transform active:scale-95 hover:bg-slate-50 dark:hover:bg-slate-700">
+              <span class="text-slate-600 dark:text-slate-300 text-xs font-bold">بیشترین پاداش</span>
+            </button>
+            <button class="flex h-9 shrink-0 items-center justify-center gap-x-2 rounded-full bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 px-5 shadow-sm transition-transform active:scale-95 hover:bg-slate-50 dark:hover:bg-slate-700">
+              <span class="text-slate-600 dark:text-slate-300 text-xs font-bold">نزدیک‌ترین زمان</span>
+            </button>
+            <button class="flex h-9 shrink-0 items-center justify-center gap-x-2 rounded-full bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 px-5 shadow-sm transition-transform active:scale-95 hover:bg-slate-50 dark:hover:bg-slate-700">
+              <span class="text-slate-600 dark:text-slate-300 text-xs font-bold">بارهای سبک</span>
+            </button>
+          </div>
+          <div class="flex flex-col gap-4 px-4">
+            <div class="group relative flex flex-col gap-4 rounded-2xl bg-surface-light dark:bg-surface-dark p-4 shadow-soft hover:shadow-md transition-shadow duration-300 border border-transparent dark:border-slate-800">
+              <div class="flex items-start justify-between gap-4">
+                <div class="flex flex-[2] flex-col gap-3">
+                  <div class="flex flex-col gap-1">
+                    <div class="flex items-center gap-2">
+                      <h3 class="text-slate-900 dark:text-white text-base font-bold leading-tight font-display">THR <span class="text-slate-400 mx-1 text-xs">✈️</span> DXB</h3>
+                    </div>
+                    <p class="text-slate-500 dark:text-slate-400 text-xs font-normal">تهران به دبی</p>
+                  </div>
+                  <div class="flex flex-wrap gap-2">
+                    <span class="inline-flex items-center gap-1 rounded-md bg-slate-100 dark:bg-slate-700 px-2 py-1 text-[10px] font-medium text-slate-600 dark:text-slate-300">
+                      <span class="material-symbols-outlined text-[12px]">calendar_today</span>
+                      ۱۲ مهر
+                    </span>
+                    <span class="inline-flex items-center gap-1 rounded-md bg-slate-100 dark:bg-slate-700 px-2 py-1 text-[10px] font-medium text-slate-600 dark:text-slate-300">
+                      <span class="material-symbols-outlined text-[12px]">luggage</span>
+                      لپ‌تاپ (۲ کیلوگرم)
+                    </span>
+                  </div>
+                  <div class="mt-1">
+                    <button class="flex w-full items-center justify-between rounded-xl h-10 px-4 bg-primary/10 hover:bg-primary/20 text-primary transition-colors">
+                      <span class="font-bold text-sm">۲۱۰ عمان ریال</span>
+                      <div class="flex items-center gap-1 text-xs font-medium">
+                        مشاهده
+                        <span class="material-symbols-outlined text-[16px] rtl:rotate-180">arrow_right_alt</span>
+                      </div>
+                    </button>
+                  </div>
+                </div>
+                <div class="relative w-24 h-24 shrink-0 rounded-xl overflow-hidden shadow-sm">
+                  <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent z-10"></div>
+                  <div class="w-full h-full bg-center bg-no-repeat bg-cover" data-alt="Modern skyline of Dubai with Burj Khalifa at sunset" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBqSiD14mSgK581mmCO0OKFUTpe_BPNQtthBZ4-lQAGV6uRz9OrywkHhKVzYud7P0IFpQgHEpGVkole86ujgxA_267YWx1R2N7vDNoN0Ps6JUagUFAfIKAkMvkTTU2j9s_38HpDdd9dVigOzK0y3Kz1wt-g5gORWP3pIiW_raqiy5kW6BIN2MdMoFE5QyDPW3tMBEGavZpv1Mgs3VKufWJ2TTmC9_7nVCv7NfWFaxAlOZSGNW2ZGMvnXNlxLUVSM5BqPGEUORXQc2j5");'>
+                  </div>
+                  <div class="absolute bottom-1 right-1 z-20">
+                    <span class="material-symbols-outlined text-white text-[14px]">verified_user</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="group relative flex flex-col gap-4 rounded-2xl bg-surface-light dark:bg-surface-dark p-4 shadow-soft hover:shadow-md transition-shadow duration-300 border border-transparent dark:border-slate-800">
+              <div class="flex items-start justify-between gap-4">
+                <div class="flex flex-[2] flex-col gap-3">
+                  <div class="flex flex-col gap-1">
+                    <div class="flex items-center gap-2">
+                      <h3 class="text-slate-900 dark:text-white text-base font-bold leading-tight font-display">IST <span class="text-slate-400 mx-1 text-xs">✈️</span> LHR</h3>
+                    </div>
+                    <p class="text-slate-500 dark:text-slate-400 text-xs font-normal">استانبول به لندن</p>
+                  </div>
+                  <div class="flex flex-wrap gap-2">
+                    <span class="inline-flex items-center gap-1 rounded-md bg-slate-100 dark:bg-slate-700 px-2 py-1 text-[10px] font-medium text-slate-600 dark:text-slate-300">
+                      <span class="material-symbols-outlined text-[12px]">calendar_today</span>
+                      ۱۵ مهر
+                    </span>
+                    <span class="inline-flex items-center gap-1 rounded-md bg-slate-100 dark:bg-slate-700 px-2 py-1 text-[10px] font-medium text-slate-600 dark:text-slate-300">
+                      <span class="material-symbols-outlined text-[12px]">description</span>
+                      مدارک (۰.۵ کیلوگرم)
+                    </span>
+                  </div>
+                  <div class="mt-1">
+                    <button class="flex w-full items-center justify-between rounded-xl h-10 px-4 bg-primary/10 hover:bg-primary/20 text-primary transition-colors">
+                      <span class="font-bold text-sm">۴۸۰عمان ریال</span>
+                      <div class="flex items-center gap-1 text-xs font-medium">
+                        مشاهده
+                        <span class="material-symbols-outlined text-[16px] rtl:rotate-180">arrow_right_alt</span>
+                      </div>
+                    </button>
+                  </div>
+                </div>
+                <div class="relative w-24 h-24 shrink-0 rounded-xl overflow-hidden shadow-sm">
+                  <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent z-10"></div>
+                  <div class="w-full h-full bg-center bg-no-repeat bg-cover" data-alt="Iconic Big Ben and red bus in London street" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAMI5OKQPn80sRQnEV2iOQWozvmbcL7rbLbuePwEaQqRt-qc1r5Lc-c9asRG-Xz-9cLN17steF3gysrGaLZHPW71Jm847ln4USc5cP9r7JSM7yy4F1_9oFM2H_1yVycuVCi-RNtaqF7sQ2xriyDwi5Kvt_Qzz2aBaV6veTYgi_Z-zB3_s4-IoCZFeU3nqPD3_aRdquEchwoTbPNKLTA0wWdAGWtPL8D7RgqdZPFgpnivqIFBjc_mjxl4McLq8SnWAU_J7-5VzFyKdPx");'>
+                  </div>
+                  <div class="absolute bottom-1 right-1 z-20">
+                    <span class="material-symbols-outlined text-white text-[14px]">verified_user</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="group relative flex flex-col gap-4 rounded-2xl bg-surface-light dark:bg-surface-dark p-4 shadow-soft hover:shadow-md transition-shadow duration-300 border border-transparent dark:border-slate-800">
+              <div class="flex items-start justify-between gap-4">
+                <div class="flex flex-[2] flex-col gap-3">
+                  <div class="flex flex-col gap-1">
+                    <div class="flex items-center gap-2">
+                      <h3 class="text-slate-900 dark:text-white text-base font-bold leading-tight font-display">DXB <span class="text-slate-400 mx-1 text-xs">✈️</span> JFK</h3>
+                    </div>
+                    <p class="text-slate-500 dark:text-slate-400 text-xs font-normal">دبی به نیویورک</p>
+                  </div>
+                  <div class="flex flex-wrap gap-2">
+                    <span class="inline-flex items-center gap-1 rounded-md bg-slate-100 dark:bg-slate-700 px-2 py-1 text-[10px] font-medium text-slate-600 dark:text-slate-300">
+                      <span class="material-symbols-outlined text-[12px]">calendar_today</span>
+                      ۱۸ مهر
+                    </span>
+                    <span class="inline-flex items-center gap-1 rounded-md bg-slate-100 dark:bg-slate-700 px-2 py-1 text-[10px] font-medium text-slate-600 dark:text-slate-300">
+                      <span class="material-symbols-outlined text-[12px]">watch</span>
+                      ساعت (۰.۳ کیلوگرم)
+                    </span>
+                  </div>
+                  <div class="mt-1">
+                    <button class="flex w-full items-center justify-between rounded-xl h-10 px-4 bg-primary/10 hover:bg-primary/20 text-primary transition-colors">
+                      <span class="font-bold text-sm">۲۱۰ عمان ریال</span>
+                      <div class="flex items-center gap-1 text-xs font-medium">
+                        مشاهده
+                        <span class="material-symbols-outlined text-[16px] rtl:rotate-180">arrow_right_alt</span>
+                      </div>
+                    </button>
+                  </div>
+                </div>
+                <div class="relative w-24 h-24 shrink-0 rounded-xl overflow-hidden shadow-sm">
+                  <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent z-10"></div>
+                  <div class="w-full h-full bg-center bg-no-repeat bg-cover" data-alt="New York City Manhattan skyline during daytime" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBgG5YGD_XXUt_RdarrXsU_kxzSVxrfzfr5xx0I8sW7q0_sW-v0bpfaWSHCRC3EN66ENqgde74TAk34ay2mXTlkQ2RXFFCQ2udirNFhlSmgO8SabeqnC9zmJMuYrizDrJqg3El9FXOpGziRw4mDBhC3zcXC_iL3w3TKZxZLjOszcTPpQ2dO_CwmK7QwWzQW2mFiHoQKobCkYEBYpC_aiP4XJHLNTd5OXF18OO4lO8Nr8md_FeMykdvATSoZJ1O59RG2i9m8pnKqbHlo");'>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </main>
+        <nav class="fixed bottom-0 left-0 right-0 z-50 flex justify-center w-full px-4 pb-4 pointer-events-none">
+          <div class="flex w-full max-w-md items-center justify-between rounded-2xl bg-surface-light/90 dark:bg-surface-dark/90 backdrop-blur-lg p-2 shadow-2xl border border-white/20 dark:border-slate-700 pointer-events-auto">
+            <button class="flex flex-1 flex-col items-center gap-1 p-2 text-primary" data-route="home">
+              <span class="material-symbols-outlined filled text-[24px]" style="font-variation-settings: 'FILL' 1;">home</span>
+              <span class="text-[10px] font-bold">خانه</span>
+            </button>
+            <button class="flex flex-1 flex-col items-center gap-1 p-2 text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300">
+              <span class="material-symbols-outlined text-[24px]">flight_takeoff</span>
+              <span class="text-[10px] font-medium">سفرهای من</span>
+            </button>
+            <button class="flex flex-1 flex-col items-center gap-1 p-2 text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300">
+              <span class="material-symbols-outlined text-[24px]">person</span>
+              <span class="text-[10px] font-medium">پروفایل</span>
+            </button>
+          </div>
+        </nav>
       </div>
     </section>
   </body>
