--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 </div>
                 <h4 class="text-lg font-bold text-slate-900 dark:text-white mb-1">کسب درآمد در سفر</h4>
                 <p class="text-slate-500 dark:text-slate-400 text-sm mb-4 leading-snug">بخشی از هزینه سفر خود را با حمل بار جبران کنید.</p>
-                <button class="w-full py-2.5 bg-surface-light dark:bg-surface-dark hover:bg-slate-50 dark:hover:bg-slate-800 text-slate-900 dark:text-white border border-slate-200 dark:border-slate-700 rounded-full text-sm font-bold flex items-center justify-center gap-2 transition-colors" data-href="#/route" type="button">
+                <button class="w-full py-2.5 bg-surface-light dark:bg-surface-dark hover:bg-slate-50 dark:hover:bg-slate-800 text-slate-900 dark:text-white border border-slate-200 dark:border-slate-700 rounded-full text-sm font-bold flex items-center justify-center gap-2 transition-colors" data-href="#/flight-opp" type="button">
                   <span>ثبت سفر</span>
                   <span class="material-symbols-outlined text-[18px]">add</span>
                 </button>
