--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
                 </div>
                 <h4 class="text-lg font-bold text-slate-900 dark:text-white mb-1">کسب درآمد در سفر</h4>
                 <p class="text-slate-500 dark:text-slate-400 text-sm mb-4 leading-snug">بخشی از هزینه سفر خود را با حمل بار جبران کنید.</p>
-                <button class="w-full py-2.5 bg-surface-light dark:bg-surface-dark hover:bg-slate-50 dark:hover:bg-slate-800 text-slate-900 dark:text-white border border-slate-200 dark:border-slate-700 rounded-full text-sm font-bold flex items-center justify-center gap-2 transition-colors" data-href="#/flight-opp" type="button">
-                  <span>ثبت سفر</span>
-                  <span class="material-symbols-outlined text-[18px]">add</span>
+                <button class="w-full py-2.5 bg-surface-light dark:bg-surface-dark hover:bg-slate-50 dark:hover:bg-slate-800 text-slate-900 dark:text-white border border-slate-200 dark:border-slate-700 rounded-full text-sm font-bold flex items-center justify-center gap-2 transition-colors" data-route="flight-opp" type="button">
+                  <span>انتخاب سفر</span>
+                  <span class="material-symbols-outlined text-[18px]">flight_takeoff</span>
                 </button>
               </div>
             </div>
@@ -1112,21 +1112,7 @@
                       <h3 class="text-slate-900 dark:text-white text-base font-bold leading-tight font-display">DXB <span class="text-slate-400 mx-1 text-xs">✈️</span> JFK</h3>
                     </div>
                     <p class="text-slate-500 dark:text-slate-400 text-xs font-normal">دبی به نیویورک</p>
-                  </div>
-                  <div class="flex flex-wrap gap-2">
-                    <span class="inline-flex items-center gap-1 rounded-md bg-slate-100 dark:bg-slate-700 px-2 py-1 text-[10px] font-medium text-slate-600 dark:text-slate-300">
-                      <span class="material-symbols-outlined text-[12px]">calendar_today</span>
-                      ۱۸ مهر
-                    </span>
-                    <span class="inline-flex items-center gap-1 rounded-md bg-slate-100 dark:bg-slate-700 px-2 py-1 text-[10px] font-medium text-slate-600 dark:text-slate-300">
-                      <span class="material-symbols-outlined text-[12px]">watch</span>
-                      ساعت (۰.۳ کیلوگرم)
-                    </span>
-                  </div>
-                  <div class="mt-1">
-                    <button class="flex w-full items-center justify-between rounded-xl h-10 px-4 bg-primary/10 hover:bg-primary/20 text-primary transition-colors">
-                      <span class="font-bold text-sm">۲۱۰ عمان ریال</span>
-                      <div class="flex items-center gap-1 text-xs font-medium">
+edium">
                         مشاهده
                         <span class="material-symbols-outlined text-[16px] rtl:rotate-180">arrow_right_alt</span>
                       </div>
