fixing arrow forward

--- a/index.html
+++ b/index.html
@@ -1328,7 +1328,7 @@
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white pb-24 overflow-x-hidden">
 <div class="fixed top-0 w-full z-10 bg-background-light/90 dark:bg-background-dark/90 backdrop-blur-md border-b border-slate-200 dark:border-slate-800">
 <div class="flex items-center justify-between p-4 h-16 max-w-md mx-auto">
-<button class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-200 dark:hover:bg-slate-800 transition-colors text-slate-900 dark:text-white">
+<button class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-200 dark:hover:bg-slate-800 transition-colors text-slate-900 dark:text-white" data-route="flight-opp" type="button">
 <span class="material-symbols-outlined">arrow_forward</span>
 </button>
 <h1 class="text-lg font-bold text-slate-900 dark:text-white">جزئیات درخواست</h1>
