--- a/index.html
+++ b/index.html
@@ -1446,7 +1446,7 @@
 </div>
 <div class="fixed bottom-0 w-full bg-white/95 dark:bg-slate-900/95 backdrop-blur shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.1)] border-t border-slate-100 dark:border-slate-800 p-4 z-50">
 <div class="max-w-md mx-auto grid grid-cols-2 gap-3">
-<button class="w-full py-3.5 px-4 rounded-xl border border-slate-200 dark:border-slate-700 text-slate-700 dark:text-slate-200 font-bold hover:bg-slate-50 dark:hover:bg-slate-800 transition-colors" data-route="flight-opp" type="buttom">
+<button class="w-full py-3.5 px-4 rounded-xl border border-slate-200 dark:border-slate-700 text-slate-700 dark:text-slate-200 font-bold hover:bg-slate-50 dark:hover:bg-slate-800 transition-colors" data-route="registered-flight" type="buttom">
                 رد کردن
             </button>
 <button class="w-full py-3.5 px-4 rounded-xl bg-primary hover:bg-blue-600 text-white font-bold shadow-lg shadow-blue-500/30 transition-all active:scale-[0.98]" data-route="my-trips" type="button">
