--- a/index.html
+++ b/index.html
@@ -1461,62 +1461,7 @@
     id="page-cargo-order"
     data-page="cargo-order"
     class="page hidden bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-slate-100 transition-colors duration-200"
-    aria-hidden="true"> <head>
-      <!DOCTYPE html>
-
-<html class="light" dir="rtl" lang="fa"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>وضعیت ارسال کالا - Carry to Me</title>
-<!-- Fonts & Icons -->
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;family=Noto+Sans+Arabic:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<!-- Tailwind CSS -->
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<!-- Theme Configuration -->
-<script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#0f6df0",
-                        "background-light": "#f5f7f8",
-                        "background-dark": "#101822",
-                    },
-                    fontFamily: {
-                        "display": ["Manrope", "Noto Sans Arabic", "sans-serif"],
-                        "body": ["Manrope", "Noto Sans Arabic", "sans-serif"],
-                    },
-                    borderRadius: {"DEFAULT": "1rem", "lg": "1.5rem", "xl": "2rem", "2xl": "2.5rem", "full": "9999px"},
-                },
-            },
-        }
-    </script>
-<style>
-        /* Custom RTL adjustments for timeline connector lines if needed */
-        .timeline-connector {
-            right: 19px; /* Adjust based on icon size and padding */
-        }
-        /* Hiding scrollbar for horizontal scrolling elements */
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }
-    </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-  </head>
-<body class="bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-slate-100 antialiased overflow-x-hidden">
+    aria-hidden="true">
 <div class="relative flex h-full w-full flex-col max-w-md mx-auto min-h-screen pb-24 bg-background-light dark:bg-background-dark shadow-xl">
 <!-- Top App Bar -->
 <div class="sticky top-0 z-50 bg-background-light/90 dark:bg-background-dark/90 backdrop-blur-md px-4 py-3 flex items-center justify-between border-b border-slate-200 dark:border-slate-800">
@@ -1699,59 +1644,6 @@
   data-page="registered-cargo"
   class="page hidden bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-slate-100 transition-colors duration-200"
   aria-hidden="true">
-    </head>
-    <!DOCTYPE html>
-<html class="light" dir="rtl" lang="fa"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Carry to Me - Matched Travelers</title>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;family=Noto+Sans+Arabic:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#0f6df0",
-                        "background-light": "#f5f7f8",
-                        "background-dark": "#101822",
-                    },
-                    fontFamily: {
-                        "display": ["Manrope", "Noto Sans Arabic", "sans-serif"],
-                        "body": ["Manrope", "Noto Sans Arabic", "sans-serif"],
-                    },
-                    borderRadius: {"DEFAULT": "1rem", "lg": "1.5rem", "xl": "2rem", "full": "9999px"},
-                },
-            },
-        }
-    </script>
-<style>.no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }.flight-line {
-            background-image: linear-gradient(to left, #cbd5e1 50%, rgba(255,255,255,0) 0%);
-            background-position: bottom;
-            background-size: 10px 1px;
-            background-repeat: repeat-x;
-        }
-    </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-  </head>
-<body class="bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-white antialiased transition-colors duration-200">
 <div class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden max-w-md mx-auto bg-white dark:bg-slate-900 sm:border-x border-slate-200 dark:border-slate-800">
 <div class="sticky top-0 z-10 flex items-center bg-white/90 dark:bg-slate-900/90 backdrop-blur-md p-4 pb-2 justify-between border-b border-slate-100 dark:border-slate-800">
 <div class="text-slate-900 dark:text-white flex size-12 shrink-0 items-center justify-start cursor-pointer transition-opacity hover:opacity-70">
@@ -2196,35 +2088,7 @@
 </div>
 <div class="pointer-events-none fixed bottom-0 left-0 right-0 h-24 bg-gradient-to-t from-white dark:from-slate-900 to-transparent"></div>
 </div>
-
-</body></html>
-<div class="flex items-center justify-between pt-1">
-<div class="flex items-center gap-2">
-<div class="flex items-center gap-1.5 rounded-full bg-slate-100 dark:bg-slate-700 px-3 py-1.5">
-<span class="material-symbols-outlined text-slate-500 dark:text-slate-300 text-[16px]">calendar_today</span>
-<span class="text-xs font-bold text-slate-700 dark:text-slate-200">۲۲ مهر</span>
-</div>
-</div>
-<button class="flex h-10 items-center justify-center rounded-full border-2 border-primary text-primary hover:bg-primary hover:text-white px-6 text-sm font-bold shadow-sm transition-all active:scale-95">
-                        انتخاب
-                    </button>
-</div>
-</div>
-<div class="mt-4 rounded-xl bg-gradient-to-br from-primary/5 to-primary/10 border border-primary/20 p-5 text-center">
-<div class="mx-auto mb-3 flex h-12 w-12 items-center justify-center rounded-full bg-primary/20">
-<span class="material-symbols-outlined text-primary text-[24px]">notifications_active</span>
-</div>
-<h3 class="text-sm font-bold text-slate-900 dark:text-white">پرواز مناسبی پیدا نکردید؟</h3>
-<p class="mt-1 text-xs text-slate-500 dark:text-slate-400 mb-4">
-                    به محض اینکه مسافر جدیدی برای مسیر تهران به استانبول پیدا شود، به شما خبر می‌دهیم.
-                </p>
-<button class="w-full h-10 rounded-full bg-white dark:bg-slate-800 text-primary font-bold text-sm border border-primary/20 shadow-sm hover:bg-slate-50 transition-colors">
-                    خبرم کن
-                </button>
-</div>
-</div>
-<div class="pointer-events-none fixed bottom-0 left-0 right-0 h-24 bg-gradient-to-t from-white dark:from-slate-900 to-transparent"></div>
-</div>
+    </section>
 
   </body>
 </html>
