--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,7 @@
         <button class="pointer-events-auto shadow-lg shadow-primary/30 flex w-full max-w-sm cursor-pointer items-center justify-center overflow-hidden rounded-xl h-14 px-6 bg-primary hover:bg-blue-600 text-white text-base font-bold leading-normal tracking-[0.015em] transition-transform active:scale-95 gap-3" type="button">
           <span class="material-symbols-outlined text-[24px]">add_circle</span>
           <span class="truncate">جستجوی بارهای جدید</span>
-        </button>3
+        </button>
       </div>
     </section>
     <section
@@ -1323,8 +1323,7 @@
       class="page hidden bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-slate-100 transition-colors duration-200"
       aria-hidden="true"
       >
-      </head>
-<body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white pb-24 overflow-x-hidden">
+      
 <div class="fixed top-0 w-full z-10 bg-background-light/90 dark:bg-background-dark/90 backdrop-blur-md border-b border-slate-200 dark:border-slate-800">
 <div class="flex items-center justify-between p-4 h-16 max-w-md mx-auto">
 <button class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-200 dark:hover:bg-slate-800 transition-colors text-slate-900 dark:text-white" data-route="registered-flight" type="button">
@@ -1635,10 +1634,7 @@
 </div>
 <div class="h-6"></div>
 </div>
-</body></html>
-    </head>
-    
-  </section>
+    </section>
   <section
   id="page-registered-cargo"
   data-page="registered-cargo"
@@ -1826,58 +1822,7 @@
 <span class="text-xl font-black text-slate-900 dark:text-white tracking-wider">IST</span>
 <span class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">استانبول</span>
 </div>
-</div><!DOCTYPE html>
-<html class="light" dir="rtl" lang="fa"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Carry to Me - Matched Travelers</title>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;family=Noto+Sans+Arabic:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#0f6df0",
-                        "background-light": "#f5f7f8",
-                        "background-dark": "#101822",
-                    },
-                    fontFamily: {
-                        "display": ["Manrope", "Noto Sans Arabic", "sans-serif"],
-                        "body": ["Manrope", "Noto Sans Arabic", "sans-serif"],
-                    },
-                    borderRadius: {"DEFAULT": "1rem", "lg": "1.5rem", "xl": "2rem", "full": "9999px"},
-                },
-            },
-        }
-    </script>
-<style>.no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }.flight-line {
-            background-image: linear-gradient(to left, #cbd5e1 50%, rgba(255,255,255,0) 0%);
-            background-position: bottom;
-            background-size: 10px 1px;
-            background-repeat: repeat-x;
-        }
-    </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-  </head>
-<body class="bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-white antialiased transition-colors duration-200">
+</div>
 <div class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden max-w-md mx-auto bg-white dark:bg-slate-900 sm:border-x border-slate-200 dark:border-slate-800">
 <div class="sticky top-0 z-10 flex items-center bg-white/90 dark:bg-slate-900/90 backdrop-blur-md p-4 pb-2 justify-between border-b border-slate-100 dark:border-slate-800">
 <div class="text-slate-900 dark:text-white flex size-12 shrink-0 items-center justify-start cursor-pointer transition-opacity hover:opacity-70">
