--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
       /* Page-scoped range styles (to avoid conflicts). */
       [data-page="wigh"] input[type="range"] {
         -webkit-appearance: none;
+        appearance: none;
         background: transparent;
       }
       [data-page="wigh"] input[type="range"]::-webkit-slider-thumb {
@@ -286,6 +287,7 @@
 
       [data-page="val"] input[type="range"] {
         -webkit-appearance: none;
+        appearance: none;
         width: 100%;
         background: transparent;
       }
