--- a/index.html
+++ b/index.html
@@ -584,18 +584,19 @@
             </div>
           </button>
           <button
-            class="relative flex w-full items-center gap-4 rounded-2xl border-2 border-primary bg-primary/5 dark:bg-primary/10 p-4 shadow-sm transition-all duration-300 active:scale-[0.98]"
+            class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
             type="button">
             <div
-              class="flex size-12 shrink-0 items-center justify-center rounded-full bg-primary text-white shadow-glow">
-              <span class="material-symbols-outlined icon-filled" style="font-size: 24px;">devices</span>
+              class="flex size-12 shrink-0 items-center justify-center rounded-full bg-blue-50 dark:bg-blue-500/10 text-primary transition-transform group-hover:scale-110">
+              <span class="material-symbols-outlined" style="font-size: 24px;">devices</span>
             </div>
             <div class="flex-1 text-right">
-              <span class="block text-sm font-bold text-primary">الکترونیک</span>
-              <span class="block text-xs text-primary/70 mt-0.5">موبایل، لپ‌تاپ، دوربین</span>
+              <span
+                class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">الکترونیک</span>
+              <span class="block text-xs text-slate-400 mt-0.5">موبایل، لپ‌تاپ، دوربین</span>
             </div>
-            <div class="flex items-center justify-center size-6 rounded-full bg-primary text-white">
-              <span class="material-symbols-outlined" style="font-size: 16px;">check</span>
+            <div
+              class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
             </div>
           </button>
           <button
@@ -671,7 +672,7 @@
         class="sticky top-0 z-50 flex items-center justify-between bg-background-light/90 dark:bg-background-dark/90 backdrop-blur-md px-4 py-3">
         <button
           class="flex size-10 items-center justify-center rounded-full text-slate-700 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors"
-          data-href="#/cat" type="button">
+          data-route="cargo-cat" type="button">
           <span class="material-symbols-outlined text-[24px]">arrow_forward</span>
         </button>
         <h1 class="text-base font-bold leading-tight tracking-tight text-slate-900 dark:text-white">ارسال کالا</h1>
@@ -767,7 +768,7 @@
         class="flex items-center p-4 pb-2 justify-between sticky top-0 z-10 bg-background-light/95 dark:bg-background-dark/95 backdrop-blur-sm">
         <div
           class="flex size-10 shrink-0 items-center justify-center rounded-full active:bg-slate-200 dark:active:bg-slate-800 cursor-pointer text-slate-900 dark:text-white"
-          data-href="#/wigh" role="button" tabindex="0">
+          data-route="cargo-weight" role="button" tabindex="0">
           <span class="material-symbols-outlined" style="font-size: 24px;">arrow_forward</span>
         </div>
         <h2
@@ -776,11 +777,15 @@
         </h2>
         <div class="size-10 shrink-0"></div>
       </div>
-      <div class="flex w-full flex-row items-center justify-center gap-2 py-4">
-        <div class="h-1.5 w-8 rounded-full bg-slate-200 dark:bg-slate-700"></div>
-        <div class="h-1.5 w-8 rounded-full bg-slate-200 dark:bg-slate-700"></div>
-        <div class="h-1.5 w-8 rounded-full bg-primary"></div>
-        <div class="h-1.5 w-8 rounded-full bg-slate-200 dark:bg-slate-700"></div>
+      <div class="w-full px-6 pt-2 pb-6">
+        <div class="flex w-full flex-row items-center justify-between gap-2">
+          <div class="h-1.5 flex-1 rounded-full bg-slate-200 dark:bg-slate-800"></div>
+          <div class="h-1.5 flex-1 rounded-full bg-slate-200 dark:bg-slate-800"></div>
+          <div class="h-1.5 flex-1 rounded-full bg-primary shadow-[0_0_8px_rgba(15,109,240,0.4)]"></div>
+          <div class="h-1.5 flex-1 rounded-full bg-slate-200 dark:bg-slate-800"></div>
+        </div>
+        <p class="mt-2 text-center text-xs font-medium text-slate-500 dark:text-slate-400">مرحله ۳ از ۴: اعلام ارزش کالا
+        </p>
       </div>
       <div class="flex-1 flex flex-col px-6">
         <h2
@@ -877,16 +882,27 @@
     class="page hidden bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-slate-100 antialiased selection:bg-primary selection:text-white"
     aria-hidden="true">
     <div class="relative flex h-full min-h-screen w-full flex-col overflow-x-hidden pb-24">
-      <div class="px-4 pt-6 pb-2">
-        <div aria-label="Progress step 4 of 4" class="flex w-full flex-row items-center justify-center gap-2 py-4">
-          <div class="h-1.5 flex-1 rounded-full bg-primary"></div>
-          <div class="h-1.5 flex-1 rounded-full bg-primary"></div>
-          <div class="h-1.5 flex-1 rounded-full bg-primary"></div>
-          <div class="h-1.5 flex-1 rounded-full bg-primary"></div>
+      <header
+        class="sticky top-0 z-20 bg-background-light/95 dark:bg-background-dark/95 backdrop-blur-md px-4 py-3 flex items-center justify-between border-b border-slate-200 dark:border-slate-800">
+        <button
+          class="flex items-center justify-center w-10 h-10 rounded-full text-slate-700 dark:text-slate-300 hover:bg-slate-200/50 dark:hover:bg-slate-800/50 transition-colors"
+          data-route="cargo-val" type="button">
+          <span class="material-symbols-outlined text-[24px]">arrow_forward</span>
+        </button>
+        <h1 class="text-xl font-bold tracking-tight text-slate-900 dark:text-white">تصاویر و ویدیو کالا</h1>
+        <div class="w-10"></div>
+      </header>
+      <div class="px-6 pt-2 pb-6">
+        <div class="flex w-full flex-row items-center justify-between gap-2">
+          <div class="h-1.5 flex-1 rounded-full bg-slate-200 dark:bg-slate-800"></div>
+          <div class="h-1.5 flex-1 rounded-full bg-slate-200 dark:bg-slate-800"></div>
+          <div class="h-1.5 flex-1 rounded-full bg-slate-200 dark:bg-slate-800"></div>
+          <div class="h-1.5 flex-1 rounded-full bg-primary shadow-[0_0_8px_rgba(15,109,240,0.4)]"></div>
         </div>
-        <h1 class="text-slate-900 dark:text-white text-[24px] font-extrabold leading-tight text-right pt-2">
-          تصاویر و ویدیو کالا
-        </h1>
+        <p class="mt-2 text-center text-xs font-medium text-slate-500 dark:text-slate-400">مرحله ۴ از ۴: تصاویر و ویدیو
+          کالا</p>
+      </div>
+      <div class="px-4 pt-2 pb-2">
         <p class="text-slate-500 dark:text-slate-400 text-sm font-medium leading-relaxed pt-2 text-right">
           برای تایید سریع‌تر و امنیت بیشتر، لطفاً عکس‌هایی واضح از تمام زوایا بارگذاری کنید.
         </p>
@@ -1025,6 +1041,16 @@
     class="page hidden bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-white transition-colors duration-200"
     aria-hidden="true">
     <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden pb-24">
+      <header
+        class="sticky top-0 z-20 bg-background-light/95 dark:bg-background-dark/95 backdrop-blur-md px-4 py-3 flex items-center justify-between border-b border-slate-200 dark:border-slate-800">
+        <button
+          class="flex items-center justify-center w-10 h-10 rounded-full text-slate-700 dark:text-slate-300 hover:bg-slate-200/50 dark:hover:bg-slate-800/50 transition-colors"
+          data-route="cargo-pic" type="button">
+          <span class="material-symbols-outlined text-[24px]">arrow_forward</span>
+        </button>
+        <h1 class="text-xl font-bold tracking-tight text-slate-900 dark:text-white">مسیر ارسال</h1>
+        <div class="w-10"></div>
+      </header>
       <div class="flex w-full flex-col items-center pt-6 pb-2 px-4">
         <div class="flex w-full flex-row items-center justify-center gap-2 mb-6">
           <div class="h-1.5 w-1.5 rounded-full bg-primary/30"></div>
@@ -1034,9 +1060,6 @@
           <div class="h-1.5 w-1.5 rounded-full bg-primary/30"></div>
         </div>
         <div class="w-full text-right">
-          <h1 class="text-slate-900 dark:text-white tracking-tight text-[28px] font-bold leading-tight pb-2">
-            مسیر ارسال مرسوله را مشخص کنید
-          </h1>
           <p class="text-slate-500 dark:text-slate-400 text-base font-normal leading-normal">
             شهرهای مبدأ و مقصد را برای یافتن مسافر وارد کنید
           </p>
@@ -1962,7 +1985,7 @@
       class="fixed bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-background-light via-background-light to-transparent dark:from-background-dark dark:via-background-dark pointer-events-none flex justify-center pb-6">
       <button
         class="pointer-events-auto shadow-lg shadow-primary/30 flex w-full max-w-sm cursor-pointer items-center justify-center overflow-hidden rounded-xl h-14 px-6 bg-primary hover:bg-blue-600 text-white text-base font-bold leading-normal tracking-[0.015em] transition-transform active:scale-95 gap-3"
-        type="button">
+        data-href="#/registered-flight" type="button">
         <span class="material-symbols-outlined text-[24px]">add_circle</span>
         <span class="truncate">جستجوی بارهای جدید</span>
       </button>
@@ -2029,7 +2052,8 @@
             <span class="text-xs font-medium text-slate-600 dark:text-slate-400">۴.۸ (۲۴ ارسال)</span>
           </div>
         </div>
-        <button class="text-primary text-sm font-semibold hover:bg-primary/10 px-3 py-1.5 rounded-lg transition-colors">
+        <button class="text-primary text-sm font-semibold hover:bg-primary/10 px-3 py-1.5 rounded-lg transition-colors"
+          data-route="profile" type="">
           پروفایل
         </button>
       </div>
